--- a/trunk/application/CMakeLists.txt
+++ b/trunk/application/CMakeLists.txt
@@ -137,6 +137,7 @@ SET(mon-base-headers
     libraryes/base/src/singleton/csingletonmember.h
     libraryes/base/src/singleton/csingleton.h
     libraryes/base/src/cvariant.h
+    libraryes/base/src/ctimer.h
     libraryes/base/src/cstringbuilder.h
     libraryes/base/src/parcer/cparcer.h
     libraryes/base/src/parcer/cparcerfile.h
@@ -148,6 +149,7 @@ SET(mon-base-sources
     libraryes/base/src/singleton/csingletonmember.cpp
     libraryes/base/src/singleton/csingleton.cpp
     libraryes/base/src/cvariant.cpp
+    libraryes/base/src/ctimer.cpp
     libraryes/base/src/cstringbuilder.cpp
     libraryes/base/src/parcer/cparcer.cpp
     libraryes/base/src/parcer/cparcerfile.cpp
