--- a/trunk/doc/config/collector.conf
+++ b/trunk/doc/config/collector.conf
@@ -16,3 +16,11 @@ collector.nodes
 	include: "/tmp/mon/root/etc/mon/collector.node.localhost.conf";
     }
   }
+collector
+{
+  runas
+  {
+    user="mon";
+    group="users";
+  }
+}
