--- a/trunk/doc/config/node.conf
+++ b/trunk/doc/config/node.conf
@@ -8,4 +8,9 @@ node
     include: "/tmp/mon/root/etc/mon/node.cpu.conf";
     include: "/tmp/mon/root/etc/mon/node.memory.conf";
   }
+  runas
+  {
+    user="mon";
+    group="users";
+  }
 }
