Похоже, смена прав работает

--- a/trunk/doc/config/node.cpu.conf
+++ b/trunk/doc/config/node.cpu.conf
@@ -1,7 +1,18 @@
 cpu 
 {
-  runas
+  frames
   {
-    user="root";
+    utilisation
+    {
+      runas
+      {
+        user="root";
+      }
+    }
+    frequency
+    {
+      runas.user="root";
+    }
+    
   }
 }
