--- a/trunk/doc/config/collector.conf
+++ b/trunk/doc/config/collector.conf
@@ -16,6 +16,16 @@ collector.nodes
 	include: "/tmp/mon/root/etc/mon/collector.node.localhost.conf";
     }
   }
+collector.storage
+{
+  connection
+  {
+    host="localhost";
+    port=4949;
+    timeout=3;
+  }
+  password='qwerty';
+}
 collector
 {
   runas
